8230483: Shenandoah: consistently disable concurrent roots for Traversal mode

Reviewed-by: shade